--- a/about.textile
+++ b/about.textile
@@ -1,14 +1,16 @@
----
+﻿---
 title: 关于
 layout: master
 ---
 
 h2. 关于我
 
-一个不断提高和体验能力的人。
+- 一个不断提高和体验能力的人。
+- 一个不断磨炼和完善自己的人。
+- 一个不断探索人生和追求真理的人。
 
 h2. 关于这个网站
 
-网址是我自2012年开始维护的个人网站，主要用于个人学习以及创作记录。
+网址是我自2012年开始维护的个人网站，主要用于学习和记录，帮助自己探索人生和追求真理，帮助磨炼和完善自己，帮助提高和体验能力。
 
 This site is built using the "Jekyll":http://github.com/mojombo/jekyll library and hosted on "GitHub":http://github.com/.
