--- a/about.textile
+++ b/about.textile
@@ -1,13 +1,21 @@
----
+﻿---
 title: 关于
 layout: master
 ---
 
 h2. 关于我
 
-- 一个不断提高和体验能力的人。
-- 一个不断磨炼和完善自己的人。
+
+以正确的方式做正确的事情，生活的本质就是这两个正确，前者是人生观，而后者是价值观
+
+- 一个不断思索和体验人生的人。
 - 一个不断探索人生和追求真理的人。
+- 一个不断提高和体验能力的人。
+- 一个不断磨炼和完善心性的人。
+- 一个不断感悟和丰富情感的人。
+- 一个不断提升和实现人生价值的人。
+
+
 
 h2. 关于这个网站
 
